--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -7,23 +7,20 @@
     <title>Image gallery</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="/simple-lightbox/simple-lightbox.min.css" />
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.0/simple-lightbox.min.js"
-      integrity="sha512-jgXSLb67gY/0ooehNWMgKmfk6kXJgPmcQ8TTO6FW+HV3Bi5J6iPs/CMR+ag3t2pk6vSuNm4u6fQlI47BiJL/Jw=="
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.14.0/simple-lightbox.css"
+      integrity="sha512-0mokZdUWsv36/tt+yDFgN9jBRsdFaqNlEMq8bA9rlPSh5eJfdGukgSk5OmsODv9nQCWZsNLvHg7cMdXVVz8b0A=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    ></script>
+    />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <ul class="gallery">
-      
+      <li class="gallery-list"></li>
     </ul>
 
     <script src="./simple-lightbox/simple-lightbox.min.js"></script>
